# retrotris

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3kffa04pylahn4wb4r7xcgyr8xw7swv1-source  giix1id8db6z987x69fji2nf3x8a3l1g-source  xfpxz85d7603830kyplj5cmpi6k1c5y7-source
.github/workflows/: make.yml
src/: elmish.rs  gui.rs  launcher.rs  main.rs  model.rs  models.rs  pong.rs  pong_model.rs  snake.rs  snake_model.rs  tetris.rs  tui.rs
src/games/: bird.rs  mod.rs  pong.rs  runner.rs  snake.rs  tetris.rs
src/models/: mod.rs  pong.rs  runner.rs  snake.rs  tetris.rs
