[package]
name = "retrotris"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gerhard Schwanzer <geri@sdf.org>"]
keywords = ["game", "graphics"]

[dependencies]
piston = "1.0.0"
piston2d-graphics = "0.45.0"
piston_window = "0.132.0"
image = "0.25.2"
rand = "0.9.0"
gfx_device_gl = "0.16.2"
find_folder = "0.3.0"
